force-app/main/default/objects/Account/fields/ACH_Voided_Image_Received__c.field-meta.xml
<CustomField>
    <fullName>ACH_Voided_Image_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACH / Voided Image Received</label>
    <type>Checkbox</type>
</CustomField>