force-app/main/default/objects/Account/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <label>Address Type</label>
    <type>TextArea</type>
</CustomField>