force-app/main/default/objects/Account/fields/Cage_Code__c.field-meta.xml
<CustomField>
    <fullName>Cage_Code__c</fullName>
    <label>Cage Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>