force-app/main/default/objects/Account/fields/caseman__MaximumClientsServed__c.field-meta.xml
<CustomField>
    <fullName>caseman__MaximumClientsServed__c</fullName>
    <description>The maximum client-serving capacity of an organization, location, or partner organization.</description>
    <inlineHelpText>The maximum client-serving capacity of an organization, location, or partner organization.</inlineHelpText>
    <label>Maximum Clients Served At Any Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>