force-app/main/default/objects/Account/fields/Contribution_Match__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the individual&apos;s contributions are matched by another entity.</description>
    <label>Contribution Match</label>
    <type>Checkbox</type>
</CustomField>