force-app/main/default/objects/Account/fields/Coordinating_Program__c.field-meta.xml
<CustomField>
    <fullName>Coordinating_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordinating Program</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organization Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Coordinating Program)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>