force-app/main/default/objects/Account/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <description>This field stores the details of Business name, even for sole proprietors</description>
    <label>DBA Name</label>
    <type>TextArea</type>
</CustomField>