force-app/main/default/objects/Account/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>The specific department within the company where the individual works.</description>
    <label>Department</label>
    <type>TextArea</type>
</CustomField>