force-app/main/default/objects/Account/fields/Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type__c</fullName>
    <label>Donation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-time</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Major Gift</fullName>
            </value>
            <value>
                <fullName>Matching Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>