force-app/main/default/objects/Account/fields/Email_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_2__c</fullName>
    <description>A secondary email address for the individual.</description>
    <label>Email Address 2</label>
    <type>Email</type>
</CustomField>