force-app/main/default/objects/Account/fields/Email_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_3__c</fullName>
    <description>An additional email address for the individual.</description>
    <label>Email Address 3</label>
    <type>Email</type>
</CustomField>