force-app/main/default/objects/Account/fields/Funding_priorities__c.field-meta.xml
<CustomField>
    <fullName>Funding_priorities__c</fullName>
    <label>Funding priorities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Climate</fullName>
            </value>
            <value>
                <fullName>Civic Infrastructure</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            
        </valueSetDefinition>
    </valueSet>
</CustomField>