force-app/main/default/objects/Account/fields/Household_Name__c.field-meta.xml
<CustomField>
    <fullName>Household_Name__c</fullName>
    <description>The name associated with the individual&apos;s household.</description>
    <label>Household Name</label>
    <type>TextArea</type>
</CustomField>