force-app/main/default/objects/Account/fields/Is_Membership_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Membership_Active__c</fullName>
    <formula>Membership__r.Is_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Membership</label>
    <type>Checkbox</type>
</CustomField>