force-app/main/default/objects/Account/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>The job title or position of the individual within their company.</description>
    <label>Job Title</label>
    <type>TextArea</type>
</CustomField>