force-app/main/default/objects/Account/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <formula>IF(
  LEN(Name) &gt; 25,
  LEFT(Name, 25),
  Name
)</formula>
    <label>Legal Entity Name (25 characters)</label>
    <type>Text</type>
</CustomField>