force-app/main/default/objects/Account/fields/Login_Name__c.field-meta.xml
<CustomField>
    <fullName>Login_Name__c</fullName>
    <description>The username used by the individual to access the system.</description>
    <label>Login Name</label>
    <type>TextArea</type>
</CustomField>