force-app/main/default/objects/Account/fields/Main_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Main_Account_Id__c</fullName>
    <label>Main Account Id</label>
    <type>TextArea</type>
</CustomField>