force-app/main/default/objects/Account/fields/Max_Sub_Members__c.field-meta.xml
<CustomField>
    <fullName>Max_Sub_Members__c</fullName>
    <formula>IF(
    ISBLANK(Membership__r.Membership_Type__r.Max_Sub_Members__c),
    NULL,
    Membership__r.Membership_Type__r.Max_Sub_Members__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Sub Members Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>