force-app/main/default/objects/Account/fields/Most_Recent_IRB__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_IRB__c</fullName>
    <label>Most Recent IRB</label>
    <type>DateTime</type>
</CustomField>