force-app/main/default/objects/Account/fields/Most_Recent_IRS_Pub78__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_IRS_Pub78__c</fullName>
    <label>Most Recent IRS Pub78</label>
    <type>DateTime</type>
</CustomField>