force-app/main/default/objects/Account/fields/Notified_PC_On_Change_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Notified_PC_On_Change_Responsibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notified PC On Change Responsibility</label>
    <type>Checkbox</type>
</CustomField>