force-app/main/default/objects/Account/fields/Orgnanization_Email__c.field-meta.xml
<CustomField>
    <fullName>Orgnanization_Email__c</fullName>
    <description>The primary email address for the individual.</description>
    <label>Organization Email</label>
    <type>Email</type>
</CustomField>