force-app/main/default/objects/Account/fields/Person_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Contact_Name__c</fullName>
    <formula>IF(
  IsPersonAccount,
  FirstName &amp; &quot; &quot; &amp; LastName,
  Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Contact Name</label>
    <type>Text</type>
</CustomField>