force-app/main/default/objects/Account/fields/Person_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_First_Name__c</fullName>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>