force-app/main/default/objects/Account/fields/Person_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Person_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>