force-app/main/default/objects/Account/fields/Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Person_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>