force-app/main/default/objects/Account/fields/Phone_Number_3__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_3__c</fullName>
    <description>An additional contact phone number for the individual.</description>
    <label>Phone Number 3</label>
    <type>Phone</type>
</CustomField>