force-app/main/default/objects/Account/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>This field stores the payment details of the account</description>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local Program</fullName>
            </value>
            <value>
                <fullName>Coordinating Program</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Sub Member</fullName>
                <isActive>false</isActive>
                <label>Sub Member</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>