force-app/main/default/objects/Account/fields/Prospects__c.field-meta.xml
<CustomField>
    <fullName>Prospects__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Research</fullName>
                <default>true</default>
                <label>Research</label>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Cultivation</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Not Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>