force-app/main/default/objects/Account/fields/Pub_78_Verified__c.field-meta.xml
<CustomField>
    <fullName>Pub_78_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pub 78 Verified</label>
    <type>Checkbox</type>
</CustomField>