force-app/main/default/objects/Account/fields/Reason_For_NonPrivate_Foundation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_NonPrivate_Foundation_Status__c</fullName>
    <label>Reason For Non Private Foundation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>