force-app/main/default/objects/Account/fields/Registration_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Expiration_Date__c</fullName>
    <label>Registration Expiration Date</label>
    <type>Date</type>
</CustomField>