force-app/main/default/objects/Account/fields/Registration_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Registration_Purpose__c</fullName>
    <label>Registration Purpose</label>
    <length>100</length>
    <type>Text</type>
</CustomField>