force-app/main/default/objects/Account/fields/Submittable_ORG_Id__c.field-meta.xml
<CustomField>
    <fullName>Submittable_ORG_Id__c</fullName>
    <label>Submittable ORG Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>