force-app/main/default/objects/Account/fields/Tax_or_Governing_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_or_Governing_Entity_Id__c</fullName>
    <label>Tax or Governing Entity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>