force-app/main/default/objects/Account/fields/TIN_Number__c.field-meta.xml
<CustomField>
    <fullName>TIN_Number__c</fullName>
    <description>This field stores the SSN/EIN values</description>
    <label>TIN Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>