force-app/main/default/objects/Account/fields/TIN_Type__c.field-meta.xml
<CustomField>
    <fullName>TIN_Type__c</fullName>
    <description>This field denotes the TIN type of the account</description>
    <label>TIN Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSN</fullName>
            </value>
            <value>
                <fullName>EIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>