force-app/main/default/objects/Account/fields/UEI_Government_Id__c.field-meta.xml
<CustomField>
    <fullName>UEI_Government_Id__c</fullName>
    <label>UEI/Government Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>