force-app/main/default/objects/Account/recordTypes/caseman__Branch.recordType-meta.xml
<RecordType>
    <fullName>caseman__Branch</fullName>
    <active>false</active>
    <description>An Account representing a branch of your organization</description>
    <label>Branch</label>
</RecordType>