force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>Account_Id__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Membership__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Primary_Contact__c</columns>
    <columns>Is_Membership_Active__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>PC_EMAIL</columns>
    <columns>Person_Email__c</columns>
    <columns>Email_Address_2__c</columns>
    <columns>EmailAddress2__pc</columns>
    <columns>Email_Address_3__c</columns>
    <columns>EmailAddress3__pc</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>