force-app/main/default/objects/Account/listViews/Education_Funding_Priorities.listView-meta.xml
<ListView>
    <fullName>Education_Funding_Priorities</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Funding_priorities__c</field>
        <operation>includes</operation>
        <value>Education</value>
    </filters>
    <label>Education Funding Priorities</label>
</ListView>