force-app/main/default/objects/Account/listViews/Filter_Account_Using_State_or_Street.listView-meta.xml
<ListView>
    <fullName>Filter_Account_Using_State_or_Street</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE_CODE</field>
        <operation>equals</operation>
        <value>AK,AL</value>
    </filters>
    <label>Filter Account Using State or Street</label>
</ListView>