force-app/main/default/objects/Account/listViews/Household_Accounts.listView-meta.xml
<ListView>
    <fullName>Household_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>012dp0000062eab</value>
    </filters>
    <label>Household Accounts</label>
</ListView>