force-app/main/default/objects/Account/listViews/Organization.listView-meta.xml
<ListView>
    <fullName>Organization</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Program_Type__c</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Is_Membership_Active__c</columns>
    <columns>Membership__c</columns>
    <columns>Orgnanization_Email__c</columns>
    <columns>Primary_Contact__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Organization_Account</value>
    </filters>
    <label>Organization</label>
</ListView>