force-app/main/default/objects/Account/listViews/Sample_Accounts_from_NEON.listView-meta.xml
<ListView>
    <fullName>Sample_Accounts_from_NEON</fullName>
    <columns>Account_Id__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Program_Type__c</columns>
    <columns>Person_Email__c</columns>
    <columns>Membership__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Is_Membership_Active__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Organization_Account</value>
    </filters>
    <label>Sample Accounts from NEON</label>
</ListView>