force-app/main/default/objects/Account/listViews/Submittable_Accounts.listView-meta.xml
<ListView>
    <fullName>Submittable_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Subsection_Description__c</columns>
    <columns>Most_Recent_IRS_Pub78__c</columns>
    <columns>Tax_or_Governing_Entity_Id__c</columns>
    <columns>Deductibility_Status__c</columns>
    <columns>Most_Recent_IRB__c</columns>
    <columns>Reason_For_NonPrivate_Foundation_Status__c</columns>
    <columns>OFAC_Status__c</columns>
    <columns>Organization_Type__c</columns>
    <columns>Pub_78_Verified__c</columns>
    <columns>Ruling_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Submittable_ORG_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Submittable Accounts</label>
</ListView>